Bug Fixed: Navbar items overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,13 +503,7 @@ body {
   overflow-y: scroll;
 }
 
-.navbar-list {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
 
-  margin-block-end: 10px;
-}
 /* .navbar-item:nth-child(9) .navbar-link {
   margin-right: 35px;
 } */
@@ -1741,7 +1735,7 @@ input[type="submit"]:hover {
     gap: 12px;
     align-items: center;
     text-align: center;
-    gap: 13.2px;
+    gap: 12px;
   }
 
   /* .switch-container {
